<resources>
    <string name="app_name">McFlix</string>

    <string name="first_card_title">Videos</string>
    <string name="first_card_content">Watch all of your favorite videos!</string>
    <string name="first_card_button">Watch videos</string>

    <string name="second_card_title">Streams</string>
    <string name="second_card_content">Watch the current live streams and latest VoDs!</string>
    <string name="second_card_button">Watch streams</string>

    <string name="third_card_title">Stream content</string>
    <string name="third_card_content">Stream you own content for other users to see what you are up to!</string>
    <string name="third_card_button">Start streaming</string>


    <string name="video_categories_title">Video categories</string>
    <string name="title_activity_watch_stream">WatchStreamActivity</string>

    <string name="start_publishing">Start Streaming</string>
    <string name="stop_publishing">Stop Streaming</string>

    <string name="stream_title_hint">Type in your stream title here</string>
</resources>
